const e=1,t=[{type:"Timeout",mesh:"default",name:"timeout-all-default",creationTime:"2021-07-29T10:18:49.954858+02:00",modificationTime:"2021-07-29T10:18:49.954858+02:00",sources:[{match:{"kuma.io/service":"*"}}],destinations:[{match:{"kuma.io/service":"*"}}],conf:{connectTimeout:"5s",tcp:{idleTimeout:"3600s"},http:{requestTimeout:"15s",idleTimeout:"3600s"},grpc:{streamIdleTimeout:"300s"}}}],i={total:1,items:t};export{i as default,t as items,e as total};
